--- a/quizStart070323/index.html
+++ b/quizStart070323/index.html
@@ -8,7 +8,7 @@
   <script src="js/app.js" type="module"></script>
   <style>
     label {
-      display: block;
+      display: none;
     }
   </style>
   <title>Quiz</title>
